replaced Paths.get() calls with Path.of()